--- a/app/src/main/res/layout/include_forward_detail_status.xml
+++ b/app/src/main/res/layout/include_forward_detail_status.xml
@@ -2,32 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="24dp"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:paddingLeft="16dp">
 
-    <TextView
-        android:id="@+id/tv_retweeted_content"
-        style="@style/TextViewBody"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="4dp"
-        android:textColor="@color/white" />
 
-    <FrameLayout
-        android:id="@+id/layout_forward_img"
+    <View
+        android:layout_width="5dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/lay_16"
+        android:background="@color/status_detail_forward" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:visibility="gone">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_image_forward"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/userinfo_header"
-            android:visibility="gone" />
-    </FrameLayout>
+        <TextView
+            android:id="@+id/tv_retweeted_content"
+            style="@style/TextViewBody"
+            android:paddingLeft="@dimen/lay_8"
+            android:paddingRight="16dp"
+            android:paddingTop="16dp"
+            android:textColor="@color/white" />
+
+        <FrameLayout
+            android:id="@+id/layout_forward_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/lay_8"
+            android:paddingRight="16dp"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/iv_image_forward"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/userinfo_header"
+                android:visibility="gone" />
+        </FrameLayout>
+
+
+    </LinearLayout>
+
 </LinearLayout>
