--- a/app/src/main/res/layout/item_comment_footer_loading.xml
+++ b/app/src/main/res/layout/item_comment_footer_loading.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="horizontal"
- >
-
+    android:orientation="horizontal">
 
     <ProgressBar
-        android:layout_marginRight="6dp"
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginRight="6dp" />
+
 
     <TextView
         style="@style/SmallGreyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/loading" />
+        android:padding="16dp"
+        android:text="@string/loading"
+        android:textSize="16sp" />
 
 
 </LinearLayout>
