Use Android-common to update the MainActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="grey">#8C8C8C</color>
     <color name="transparent">#00000000</color>
     <color name="nav_gray">#eeeeee</color>
-    <color name="nav_fenge">#bfbfbf</color>
+    <color name="nav_fenge">#bebebe</color>
     <color name="status_detail_forward">#5b6fea</color>
 
     <color name="primaryGrayPre">#aa777777</color>
