--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<hk.xhy.android.commom.widget.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<hk.xhy.android.common.widget.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/pull_to_refresh"
     android:layout_width="match_parent"
@@ -12,6 +12,6 @@
         android:layout_height="match_parent" />
 
 
-</hk.xhy.android.commom.widget.PullToRefreshLayout>
+</hk.xhy.android.common.widget.PullToRefreshLayout>
 
 
