--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <hk.xhy.android.commom.widget.PullToRefreshLayout
+    <hk.xhy.android.common.widget.PullToRefreshLayout
         android:id="@+id/pull_to_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </hk.xhy.android.commom.widget.PullToRefreshLayout>
+    </hk.xhy.android.common.widget.PullToRefreshLayout>
     <include layout="@layout/simple_layout_list_empty" />
 
     <include layout="@layout/simple_layout_list_loading" />
