--- a/app/src/main/res/layout/item_twice_config.xml
+++ b/app/src/main/res/layout/item_twice_config.xml
@@ -56,8 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginRight="@dimen/lay_16"
-            android:checked="true" />
+            android:layout_marginRight="@dimen/lay_16" />
     </LinearLayout>
 
     <View
