--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="nav_gray">#eeeeee</color>
     <color name="nav_fenge">#bebebe</color>
     <color name="status_detail_forward">#5b6fea</color>
+    <color name="txt_location_blue">#1296db</color>
 
     <color name="primaryGrayPre">#aa777777</color>
     <color name="primaryGrayLine">#dfdfdf</color>
