--- a/app/src/main/res/layout/include_forward_status.xml
+++ b/app/src/main/res/layout/include_forward_status.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/lay_16"
-    android:paddingBottom="@dimen/lay_16"
+    android:layout_marginTop="4dp"
+    android:paddingTop="@dimen/lay_8"
+    android:paddingBottom="@dimen/lay_8"
     android:background="@drawable/bg_agray2gray"
     android:orientation="vertical">
 
