--- a/app/src/main/res/layout/include_status_image.xml
+++ b/app/src/main/res/layout/include_status_image.xml
@@ -2,7 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginTop="8dp"
     >
     <ImageView
         android:id="@+id/iv_image"
