--- a/app/src/main/res/layout/item_status.xml
+++ b/app/src/main/res/layout/item_status.xml
@@ -18,9 +18,10 @@
         <TextView
             android:id="@+id/tv_content"
             style="@style/TextViewBody"
+            android:text="安普里奥厉害了哈哈哈！！"
             android:layout_width="match_parent"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp" />
 
         <!--图片-->
         <include
@@ -38,11 +39,11 @@
             android:id="@+id/ll_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="4dp"
             android:orientation="horizontal"
-            android:paddingLeft="12dp"
-            android:paddingRight="16dp"
-            android:visibility="gone">
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="16dp"
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="16dp"
@@ -51,6 +52,7 @@
 
             <TextView
                 android:id="@+id/tv_location"
+                android:text="深圳职业技术学院创业创业园"
                 android:layout_width="wrap_content"
                 android:layout_height="16dp"
                 android:textColor="@color/txt_location_blue"
